(Fix:o-table-visible-columns-dialog): Update styles

--- a/ontimize/components/table/extensions/dialog/visible-columns/o-table-visible-columns-dialog.component.scss
+++ b/ontimize/components/table/extensions/dialog/visible-columns/o-table-visible-columns-dialog.component.scss
@@ -6,7 +6,9 @@
       background: #EBEBEB;
     }
   }
-
+  .mat-icon[svgicon="ontimize:drag_handle"]{
+    cursor: move;
+  }
   .mat-icon[svgicon="ontimize:visibility"],
   .mat-icon[svgicon="ontimize:visibility_off"] {
     svg {
